Refresh Button Made

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,10 @@
 * {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-.editorStyle {
-  margin-top: 15px;
-}
-
-.bottom-pane {
-  margin: -10px 10px 0 10px;
-}
+/* Custom Scroll Bar  */
 
 /* width */
 ::-webkit-scrollbar {
@@ -28,4 +24,39 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+.editor-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left-editor-nav {}
+
+.right-editor-nav {}
+
+.editorStyle {
+  margin-top: 15px;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: normal;
+}
+
+.bottom-pane {
+  margin: -10px 10px 0 10px;
+}
+
+.rotate {
+  animation: rotateIcon 0.5s forwards;
+}
+
+@keyframes rotateIcon {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
