--- a/client/src/programming.css
+++ b/client/src/programming.css
@@ -1,15 +1,56 @@
 /************************************* Programming Mode *************************************/
 
 
+/* Custom Scroll Bar  */
+
+/* width */
+::-webkit-scrollbar {
+    width: 0px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+
+::-moz-selection {
+    /* Code for Firefox */
+    background: white;
+    color: darkblue;
+}
+
+::selection {
+    background: white;
+    color: darkblue;
+}
+
 
 /********************* CPP **********************/
 
+.editor {
+    /* margin-top: 40px; */
+}
 
 .cpp-nav {
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    background-color: grey;
+    /* background-color: grey; */
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .left-nav {
@@ -19,34 +60,69 @@
 }
 
 .left-nav p {
-    border: 1px solid red;
-    padding: 3px 6px 3px 6px;
-    margin: 0 20px 0 20px;
+    padding: 7px 14px 7px 10px;
+    font-size: medium;
+    margin: 0 20px 0 0;
     cursor: pointer;
+    background: #2ecc71;
+    /* Success  #e74c3c for danger*/
+    border-radius: 5px;
+    color: white;
 }
+
+.left-nav p:hover {
+    background: #29ad60;
+}
+
+.right-nav .mode p {
+    padding: 7px 10px 7px 10px;
+    font-size: medium;
+    margin: 0 0 0 20px;
+    cursor: pointer;
+    background: #212121;
+    /* Success  #e74c3c for danger*/
+    border-radius: 5px;
+    color: white;
+}
+
+.right-nav .mode p:hover {
+    background: #212121;
+    opacity: 0.8;
+}
+
 
 #input-textarea {
     resize: none;
     word-wrap: break-word;
     outline: none;
-    border: 1px solid black;
-    height: 13rem;
+    border: 2px solid white;
+    border-radius: 5px;
+    height: 8rem;
     padding: 8px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.1rem;
+    color: whitesmoke;
 }
 
 #output-textarea {
     resize: none;
     word-wrap: break-word;
     outline: none;
-    border: 1px solid black;
-    height: 13rem;
+    border: 2px solid white;
+    border-radius: 5px;
+    height: 8rem;
     padding: 8px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.1rem;
+    color: whitesmoke;
+    background-color: none;
 }
 
 #input-output-column {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    color: white;
+    font-size: 1.4rem;
 }
