--- a/client/src/programming.css
+++ b/client/src/programming.css
@@ -38,11 +38,53 @@
 
 /********************* CPP **********************/
 
-.editor {
-    /* margin-top: 40px; */
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
 }
 
-.cpp-nav {
+.dropdown {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 200px;
+}
+
+.dropdown-content {
+    /* display: none; */
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index:9999999;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+    z-index: 9999999;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+
+
+.programming-footer {
     /* background-size: cover; */
     /* background-repeat: no-repeat; */
     display: flex;
@@ -53,13 +95,13 @@
     margin-bottom: 20px;
 }
 
-.left-nav {
+.left-footer {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.left-nav p {
+.left-footer p {
     padding: 7px 14px 7px 10px;
     font-size: medium;
     margin: 0 20px 0 0;
@@ -70,11 +112,11 @@
     color: white;
 }
 
-.left-nav p:hover {
+.left-footer p:hover {
     background: #29ad60;
 }
 
-.right-nav .mode p {
+.right-footer .mode p {
     padding: 7px 10px 7px 10px;
     font-size: medium;
     margin: 0 0 0 20px;
@@ -85,9 +127,16 @@
     color: white;
 }
 
-.right-nav .mode p:hover {
+.right-footer .mode p:hover {
     background: #212121;
     opacity: 0.8;
+}
+
+.err-msg {
+    word-wrap: break-word;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.1rem;
+    color: whitesmoke;
 }
 
 
