Working on Diffrent language mode

--- a/client/src/programming.css
+++ b/client/src/programming.css
@@ -1,5 +1,9 @@
 /************************************* Programming Mode *************************************/
 
+html {
+    scroll-behavior: smooth;
+}
+
 
 /* Custom Scroll Bar  */
 
@@ -39,50 +43,19 @@
 /********************* CPP **********************/
 
 
-.dropbtn {
-    background-color: #4CAF50;
+.editor-navbar {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.1rem;
+    align-items: center;
+}
+
+.left-editor-navbar {
     color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
+    background-color: #212121;
+    padding: 6px 12px 6px 12px;
+    border-radius: 10px 10px 0px 0px;
 }
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-    margin-bottom: 200px;
-}
-
-.dropdown-content {
-    /* display: none; */
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 9999999;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-    z-index: 9999999;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-}
-
 
 .programming-footer {
     /* background-size: cover; */
