--- a/client/src/programming.css
+++ b/client/src/programming.css
@@ -55,6 +55,11 @@ html {
     background-color: #212121;
     padding: 6px 12px 6px 12px;
     border-radius: 10px 10px 0px 0px;
+    margin-bottom: -1px;
+}
+
+.css-14el2xx-placeholder, .css-tj5bde-Svg {
+    color: white !important;
 }
 
 .programming-footer {
