--- a/client/src/programming.css
+++ b/client/src/programming.css
@@ -115,6 +115,7 @@ html {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.1rem;
     color: whitesmoke;
+    white-space: pre;
 }
 
 
