--- a/client/src/main.css
+++ b/client/src/main.css
@@ -31,14 +31,12 @@ li a:hover {
 /* Landing Page */
 
 .landing {
-    background-image: url('https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1331&q=80');
+    background-image: url('https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1120&q=80');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     height: 93vh;
     width: 100vw;
-
-
 }
 
 .dark-overlay {
@@ -93,4 +91,8 @@ li a:hover {
     margin: 10px;
     background: white;
     color: black
+}
+
+.landing-btns a:hover:nth-child(2) {
+    color: #17a2b8;
 }
